--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div class="container">
-		<div id="titleId">loading...</div>
-		<div id="add" class="add">
-			<input type="button" id="addBtn" value="开始考试"  style="display: none"/>
-		</div>
-	</div>
-	<script src="main.js"></script>
+<div class="container">
+    <div>在开始考试页面点击下方红色按钮</div>
+</div>
+<div class="container">
+    <div id="titleId">loading...</div>
+    <div id="add" class="add">
+        <input type="button" id="addBtn" value="开始考试" style="display: none;color:red;"/>
+    </div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
